--- a/backend/src/app/views/emails/registration.hbs
+++ b/backend/src/app/views/emails/registration.hbs
@@ -1,6 +1,7 @@
 <strong>Olá ,{{studentName}}, seja bem vindo!</strong>
 <p> Confira os detalhes da sua matrícula abaixo:</p>
 <p>
+  <strong>Id de cadastro: </strong>{{studentId}}<br />
   <strong>Aluno: </strong>{{studentName}}<br />
   <strong>Plano: </strong>{{planTxt}}<br />
   <strong>Valor Total: </strong>{{price}}<br />
